# covid19-data-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  covid19-data.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  covid19-data.rockspec  covid19-data_sdk.lua  covid19-data_types.lua  features.lua
php/: AGENTS.md  (+7 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  covid19data_sdk.py  covid19data_types.py  features.py  pyproject.toml
py/core/: context.py  control.py  error.py  operation.py  response.py  utility_type.py
py/entity/: all_entity.py  historical_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  clienttrack_feature.py  metrics_feature.py  proxy_feature.py  rbac_feature.py  retry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_all_direct.py  test_all_entity.py  test_exists.py  test_historical_direct.py  test_historical_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_point.py  make_request.py  make_spec.py  make_url.py  prepare_headers.py  prepare_path.py  prepare_query.py  register.py  result_body.py  transform_request.py  transform_response.py
(+430 files in other folders)
